docs/css/styles.css
    *,
    *::after,
    *::before {
        box-sizing: border-box;
        /* background: red; */
    }
    
    html {
        scroll-behavior: smooth;
        scrollbar-color: none;
        scrollbar-arrow-color: none;
        scrollbar-width: none;
    }
    
     ::-webkit-scrollbar {
        width: 0px;
        height: 0px;
    }
    
     ::-webkit-scrollbar-thumb {
        background: rgba(0, 0, 0);
    }
    
     ::-webkit-scrollbar-track {
        background: rgba(0, 0, 0, 0.2);
    }
    
     :root {
        --ff-primary: 'Rubik', sans-serif;
        --ff-secondary: 'Poppins', sans-serif;
        --fw-bold: 400;
        --fw-regular: 300;
        --fs-h1: 2.5rem;
        --fs-h2: 2rem;
        --fs-h3: 1.25rem;
        --fs-body: 1rem;
        --clr-light: white;
        --clr-dark: #482C3D;
        --clr-main: #67A286;
    }
    
    li {
        list-style: none;
    }
    
    a {
        text-decoration: none;
        color: inherit;
    }
    
    body {
        background: var(--clr-main);
        color: var(--clr-dark);
        margin: 0;
        font-size: var(--fs-body);
        font-family: var(--ff-secondary);
        font-weight: var(--fw-regular);
    }
    
    section {
        padding: 2em 4em;
        margin: 0;
        align-items: center;
        justify-content: center;
    }
    
    img {
        display: block;
        max-width: 100%;
    }
    
    @media (min-width: 800px) {
         :root {
            --fs-h1: 3.5rem;
            --fs-h2: 2rem;
            --fs-h3: 1.5rem;
            --fs-body: 1rem;
        }
    }
    
    input,
    button,
    submit {
        border: none;
    }
    
    .button {
        text-align: center;
        font-family: var(--ff-primary);
        text-decoration: none;
        color: var(--clr-light);
        padding: 0.5em;
        width: 100%;
        border: 2px solid var(--clr-light);
        border-radius: 1em 1em 1em 1em;
        -moz-border-radius: 1em 1em 1em 1em;
        -webkit-border-radius: 1em 1em 1em 1em;
        outline-offset: -1px;
        grid-area: button;
        transition: all 300ms ease-in-out;
        margin-top: 1em;
    }
    
    .button:hover {
        background-color: var(--clr-light);
        color: var(--clr-main);
    }
    /* typography */
    
    h1,
    h2,
    h3 {
        line-height: 1;
        margin: 0;
        padding: 0;
    }
    
    h1 {
        font-size: var(--fs-h1);
    }
    
    h2 {
        font-size: var(--fs-h2);
    }
    
    h3 {
        font-size: var(--fs-h3);
        font-weight: var(--fw-bold);
    }
    
    .section__title {
        font-family: var(--ff-primary);
        text-align: center;
        text-shadow: 0px 2px var(--clr-dark);
    }
    
    .section__title::after {
        content: "";
        display: block;
        height: 2px;
        border-radius: 2px;
        position: relative;
        width: 2em;
        margin: 0.25em auto 1em;
        padding: 0;
        background: var(--clr-light);
        line-height: 0;
    }
    
    .section__subtitle {
        font-family: var(--ff-secondary);
        font-size: var(--fs-h3);
        font-weight: var(--fw-bold);
    }
    
    .section__title--intro {
        margin: 0;
        padding: 0;
    }
    
    .section__title--intro::after {
        width: 90%;
        margin: 0.25em auto 0.25em;
    }
    
    .section__subtitle--intro {
        margin: 0;
        padding: 0;
    }
    /* Nav and header */
    
    header {
        text-align: center;
        position: fixed;
        z-index: 15;
        width: 100%;
        /* box-shadow: 0px 3px 0px black; */
    }
    
    .nav__body {
        margin: 0;
        padding: 0;
        align-items: center;
        height: 3em;
        background: linear-gradient(180deg, #67a286 0%, #67a286c0 20%, #67a28600 100%);
        color: var(--clr-light);
    }
    
    .hamburger {
        display: flex;
        align-items: center;
        position: absolute;
        top: 0;
        right: 0;
        margin-right: 1em;
        width: 35px;
        height: 100%;
    }
    
    .hamburger span,
    .hamburger span::after,
    .hamburger span::before {
        display: block;
        position: relative;
        width: 100%;
        height: 5px;
        background: var(--clr-light);
        border-radius: 5px;
    }
    
    .hamburger span::after,
    .hamburger span::before {
        content: "";
        position: absolute;
    }
    
    .hamburger span::after {
        top: 10px;
    }
    
    .hamburger span::before {
        bottom: 10px;
    }
    
    .logo {
        display: flex;
        position: relative;
        transform-origin: center;
        text-align: center;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 100%;
        font-family: var(--ff-primary);
        font-size: var(--fs-h2);
        text-decoration: none;
        text-shadow: 0px 2px var(--clr-dark);
    }
    
    .nav__list {
        display: grid;
        position: relative;
        transform: translateY(-150%);
        width: 100%;
        height: max-content;
        grid-auto-flow: row;
        align-items: stretch;
        justify-content: stretch;
        background: linear-gradient(180deg, #67a286 0%, #67a286ea 40%, #67a28649 90%, #67a28600 100%);
        color: var(--clr-light);
        padding: 2em;
        margin: 0;
        margin-top: -5em;
        padding-top: 5em;
        gap: 1em;
        text-align: center;
        transition: all 300ms ease-in-out;
        z-index: -1;
    }
    
    .nav__list.show {
        transform: translateY(0%);
    }
    
    .nav__item {
        font-size: var(--fs-h3);
        font-weight: var(--fw-bold);
        transform: scale(1);
        transition: all 300ms cubic-bezier(0.5, 0, 0.5, 1);
    }
    
    .nav__item:hover {
        transform: scale(1.05);
    }
/* ... */

